kube/staging/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pse-atg-react-staging
  namespace: staging
  labels:
    app: pse-atg-react-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pse-atg-react-staging
  template:
    metadata:
      labels:
        app: pse-atg-react-staging
    spec:
      containers:
      - name: pse-atg-react-staging
        image: gcr.io/pse-atg/pse-atg-react:staging
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      restartPolicy: Always
