kube/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-staging-svc
  namespace: staging
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: pse-atg-react-staging
